[omnibox] Use one-line layout when keyword supersedes tab match

When an autocomplete suggestion matches an open tab, a two-line
layout is used because a switch-to-tab button is shown. But when
the suggestion also matches a keyword result, the button is not
shown and uses the one-line layout as normal.

Bug: 865501
Change-Id: I71c2ef65d7cdad4ddd6efa94b2f3b122ddd6893a
Reviewed-on: https://chromium-review.googlesource.com/1143889
Reviewed-by: Justin Donnelly <jdonnelly@chromium.org>
Commit-Queue: Orin Jaworski <orinj@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576702}
Former-commit-id: 010c89f039cce4d8f7d612b13caca0d398d6246f