components/omnibox/browser/autocomplete_match.h
@@ -354,6 +354,12 @@ struct AutocompleteMatch {
   // follow the common rules for reversing lines.
   bool IsExceptedFromLineReversal() const;
 
+  // Not to be confused with |has_tab_match|, this returns true if the match
+  // has a matching tab and will use a switch-to-tab button. It returns false,
+  // for example, when the switch button is not shown because a keyword match
+  // is taking precedence.
+  bool ShouldShowTabMatch() const;
+
   // The provider of this match, used to remember which provider the user had
   // selected when the input changes. This may be NULL, in which case there is
   // no provider (or memory of the user's selection).
